# theoria

./: .gitignore  LICENSE  README.md  cli.py  export_problem.py  grade.py  grader_prompt.md  harness.py  llm.py  loaders.py  pipeline.py  pyproject.toml  sandbox.py
configs/: api.yaml  audit_grader.yaml  defaults.yaml  restricted.yaml  sage.yaml  tuned.yaml
docs/: ARCHITECTURE.md
sandbox/: Dockerfile
sandbox-sage/: Dockerfile
